--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    lifecycle (>= 1.0.0)
+    lifecycle (>= 1.0.0),
+    semver (>= 0.2.0),
+    semverutils (>= 0.1.0)
 RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 Suggests: 
